# cob_control

cob_control_msgs/srv/: GetObstacleDistance.srv
cob_frame_tracker/include/cob_frame_tracker/: cob_frame_tracker.h
cob_frame_tracker/src/: cob_frame_tracker.cpp  interactive_frame_target.cpp
cob_nonlinear_mpc/: CMakeLists.txt  package.xml
cob_nonlinear_mpc/cartesian_scripts/: linear_interpolation.py
cob_nonlinear_mpc/example_config/: nmpc.yaml
cob_nonlinear_mpc/include/cob_nonlinear_mpc/: bounding_volumes.h  cob_nonlinear_mpc.h  data_types.h  forward_kinematics.h  nonlinear_mpc.h  robot.h
cob_nonlinear_mpc/launch/: example.launch
cob_nonlinear_mpc/scripts/: CobMPC.py  cob_mpc.py  data.csv  direct_multiple_shooting.py  exercise.py  kdl.py  kinematics.py  model.apm  mpc.py  mysetup.cfg  publishers.py  read_ros_topics.py  softdrink.apm  solution_production.csv  subscribers.py  test.py  thread_test.py
cob_nonlinear_mpc/src/: bounding_volumes.cpp  cob_nonlinear_mpc.cpp  cob_nonlinear_mpc_node.cpp  forward_kinematics.cpp  nonlinear_mpc.cpp
cob_nonlinear_mpc/src/utilities/: nonlinear_mpc_utilities.cpp
cob_obstacle_distance/config/: example_obstacle_distance.yaml
cob_obstacle_distance/include/cob_obstacle_distance/: distance_manager.hpp  obstacle_distance_data_types.hpp  shapes_manager.hpp
cob_obstacle_distance/scripts/: test_interactive_obstacle_node.py  test_obstacle_publisher_node.py
cob_obstacle_distance/src/: distance_manager.cpp  shapes_manager.cpp
cob_twist_controller/: CMakeLists.txt
cob_twist_controller/cfg/: TwistController.cfg
cob_twist_controller/include/cob_twist_controller/: callback_data_mediator.h  cob_twist_controller.h  cob_twist_controller_data_types.h  inverse_differential_kinematics_solver.h
cob_twist_controller/include/cob_twist_controller/constraint_solvers/: constraint_solver_factory.h
cob_twist_controller/include/cob_twist_controller/constraints/: constraint_ca_impl.h
cob_twist_controller/src/: callback_data_mediator.cpp  cob_twist_controller.cpp  inverse_differential_kinematics_solver.cpp
cob_twist_controller/src/constraint_solvers/: constraint_solver_factory.cpp
cob_twist_controller/src/kinematic_extensions/: kinematic_extension_dof.cpp
mpc_controller/: CMakeLists.txt
mpc_controller/include/mpc_controller/: kinematics.h
mpc_controller/launch/: sim.launch
mpc_controller/src/: kinematics.cpp  pd_trajectory_generator_node.cpp
mpc_controller/test/: kinematics_test.cpp
(+19 files in other folders)
